[project]
name = "loadshed"
version = "0.0.4"
authors = [
  { name="Example Anteater", email="author@example.com" },
]
description = "load shedding"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/agokhale/loadshed"
